[gd_scene load_steps=7 format=3 uid="uid://bbssswrytbmd4"]

[ext_resource type="Texture2D" uid="uid://b2ir4w72upjo0" path="res://assets/ui/large_button_normal.png" id="1_ju7or"]
[ext_resource type="Texture2D" uid="uid://dd710k8x4h6f3" path="res://assets/ui/large_button_pressed.png" id="2_6et5k"]
[ext_resource type="Texture2D" uid="uid://2ygx1ogquvme" path="res://assets/ui/large_button_hover.png" id="3_t0v8e"]
[ext_resource type="Texture2D" uid="uid://dpqf3cm55t2rc" path="res://assets/ui/large_button_focused.png" id="4_5xs66"]
[ext_resource type="Script" uid="uid://cv5gr4ciq7td6" path="res://scenes/ui/component/goto_button.gd" id="5_hf05d"]
[ext_resource type="Theme" uid="uid://645nsksqw7ic" path="res://resources/label_button.tres" id="6_6et5k"]

[node name="GotoButton" type="TextureButton"]
offset_right = 320.0
offset_bottom = 56.0
texture_normal = ExtResource("1_ju7or")
texture_pressed = ExtResource("2_6et5k")
texture_hover = ExtResource("3_t0v8e")
texture_focused = ExtResource("4_5xs66")
script = ExtResource("5_hf05d")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_6et5k")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
